SERVER-31611: Perform a clean shutdown and downgrade on an interpreted FCV 3.2.

There are a few cases where a 3.6 binary will refuse to start up because it
concludes the datafiles belong to a 3.2 mongod. In those cases, the server
must perform a clean shutdown that ensures datafiles are downgraded to a
format that older binaries can understand.