src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -495,11 +495,19 @@ void WiredTigerKVEngine::cleanShutdown() {
             closeConfig = "leak_memory=true";
         }
 
-        // Only downgrade when the fCV document has been explicitly initialized and is 3.4.
+        // There are two cases to consider where the server will shutdown before the in-memory FCV
+        // state is set. One is when `EncryptionHooks::restartRequired` is true. The other is when
+        // the server shuts down because it refuses to acknowledge an FCV value more than one
+        // version behind (e.g: 3.6 errors when reading 3.2).
+        //
+        // In the first case, we ideally do not perform a file format downgrade (but it is
+        // acceptable). In the second, the server must downgrade to allow a 3.4 binary to start
+        // up. Ideally, our internal FCV value would allow for older values, even if only to
+        // immediately shutdown. This would allow downstream logic, such as this method, to make
+        // an informed decision.
         const bool needsDowngrade = !_readOnly &&
-            serverGlobalParams.featureCompatibility.isVersionInitialized() &&
-            (serverGlobalParams.featureCompatibility.getVersion() ==
-             ServerGlobalParams::FeatureCompatibility::Version::kFullyDowngradedTo34);
+            serverGlobalParams.featureCompatibility.getVersion() ==
+                ServerGlobalParams::FeatureCompatibility::Version::kFullyDowngradedTo34;
 
         invariantWTOK(_conn->close(_conn, closeConfig));
         _conn = nullptr;
